--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,33 @@
+#DB CONNECTION INFO
 spring.datasource.url=jdbc:mysql://localhost:3306/catchvdatabase?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=12341234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#DB CONNECTION POOLS
+#//todo: ??? ??? ?? ??? ? ??
+#logging.level.com.zaxxer.hikari=TRACE
+#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+#spring.datasource.hikari.minimumIdle=5
+#spring.datasource.hikari.connectionTimeout=10000
+#spring.datasource.hikari.maximumPoolSize=10
+#spring.datasource.hikari.idleTimeout=10000
+#spring.datasource.hikari.maxLifeTime=580000
+#spring.datasource.hikari.autoCommit=true
+#spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+#spring.datasource.hikari.data-source-properties.prepStmtCacheSize=200
+#spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+#spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
 
+
+#
 spring.security.user.name=user
 spring.security.user.password=1234
 logging.file.path=logs
 logging.level.basic.LogTestController = DEBUG
 spring.servlet.multipart.maxFileSize=12MB
 spring.servlet.multipart.maxRequestSize=12MB
+
+implementation 'com.google.code.gson:gson:2.8.7'
 
 # multipart
 multipart.enabled=true
